# HACI

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  __init__.py  cli.py  docker-compose.yml  harness.py  orchestrator.py  pyproject.toml  types.py
HACI-Lnagsmith-Implementation/: haci_langsmith_10_deployment.html  haci_langsmith_1_setup.html  haci_langsmith_2_graph.html  haci_langsmith_3_agents.html  haci_langsmith_4_observability.html  haci_langsmith_5_harness_phases.html  haci_langsmith_6_swarm.html  haci_langsmith_7_context.html  haci_langsmith_8_hitl.html  haci_langsmith_9_testing.html  haci_langsmith_index.html
HACI-Prompts/: haci_prompting_1_foundations.html  haci_prompting_2_harness.html  haci_prompting_3_agents.html  haci_prompting_4_mcp.html
config/: haci.example.yaml
docs/: HACI_API_MCP_Integration_Strategy.md  HACI_API_Reference.md  HACI_Case_Studies.md  HACI_Customer_Acquisition_Strategy.md  HACI_Demo_Optimization_Strategy.md  HACI_FAQ.md  HACI_Glossary.md  HACI_Integration_Cookbooks.md  HACI_LangSmith_Implementation_Guide-local.md  HACI_LangSmith_Implementation_Guide.md  HACI_Quick_Start_Guide.md  HACI_Sales_Battlecards.md  HACI_Troubleshooting_Guide.md  HACI_User_Operations_Manual.md
docs/architecture/: README.md
src/haci/: config.py
tests/: conftest.py
tests/unit/: test_orchestrator.py
